# ccc

./: .gitignore  CHANGELOG.md  LICENSE  ccc.cabal  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5d0168c5yzix3psq9y3mb322r4m57n2l-source
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Lexer.hs  Main.hs  Parser.hs  Tokenizer.hs  Types.hs  lexer.hs
