cabal-version:      3.0
name:               ccc

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           ccc is a lightweight C compiler written in Haskell

homepage:           https://github.com/MelkerI03/ccc/tree/main
license:            MIT
license-file:       LICENSE

author:             Melker Isaksson
maintainer:         Melker.Isaksson@outlook.com

category:           Compiler
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable ccc
    import:           warnings
    main-is:          Main.hs

    other-modules:    Types,
                      Lexer,
                      Tokenizer,
                      Parser

    build-depends:    base ^>=4.18
    hs-source-dirs:   src
    default-language: Haskell2010
